--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cat API Demo</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"></link>
 </head>
 <body>
-  <h1>Cat API Demo</h1>
   <div class="container">
     <div>
       <label for="breed-select">Select Breed:</label>
